Fixed console not working on mobile devices

--- a/css/theme.css
+++ b/css/theme.css
@@ -28,110 +28,3 @@ h1,h2,h3,h4,h5,h6 {
 	margin-left:20px;
 }
 
-.console {
-	height: 600px;
-
-	background: #333;
-	border: #444 solid 1px;
-	color: white;
-
-	cursor: default;
-	outline: 0;
-	-webkit-user-select: none;
-
-	transition: background-color 0.2s ease-in-out;
-	-o-transition: background-color 0.2s ease-in-out;
-	-moz-transition: background-color 0.2s ease-in-out;
-	-webkit-transition: background-color 0.2s ease-in-out;
-
-	position: relative;
-	overflow: hidden;
-
-	font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
-}
-
-.console:focus {
-	background: #000;
-	box-shadow: #6AF 0 0 10px;
-}
-
-.console-rows {
-	display: block;
-	position: absolute;
-
-	overflow: hidden;
-	width: 75%;
-
-	opacity: 1;
-
-	transition: opacity 0.5s ease-in-out;
-	-webkit-transition: opacity 0.5s ease-in-out;
-	-moz-transition: opacity 0.5s ease-in-out;
-	-o-transition: opacity 0.5s ease-in-out;
-}
-
-.console pre, .console .cursor {
-	/* revert bootstrap styles */
-	display: inline;
-	padding: 0;
-	margin: 0;
-
-	font-size: 14px;
-	line-height: 16px;
-	word-break: break-all;
-	word-wrap: break-word;
-	color: white;
-	background: none;
-	border: none;
-	border-radius: 0;
-
-	transition: opacity 0.2s ease-in-out;
-	-webkit-transition: opacity 0.2s ease-in-out;
-	-moz-transition: opacity 0.2s ease-in-out;
-	-o-transition: opacity 0.2s ease-in-out;
-
-	z-index: 500;
-}
-
-.console .cmd {
-	font-size: 14px;
-	line-height: 16px;
-	font-weight: bold;
-}
-
-.console .error {
-	display: block;
-	color: #A00;
-	font-weight: bold;
-}
-
-.console .result {
-	display: block;
-	color: #0A0;
-	font-weight: bold;
-}
-
-.console .output {
-	display: block;
-	color: #999;
-}
-
-.console .hint {
-}
-
-.console-row {
-	margin-bottom: 30px;
-}
-
-.console-closed {
-	height: 250px;
-	margin-top: 150px;
-	display: none;
-	position: relative;
-	z-index: 1;
-
-	transition: opacity 0.5s ease-in-out;
-	-webkit-transition: opacity 0.5s ease-in-out;
-	-moz-transition: opacity 0.5s ease-in-out;
-	-o-transition: opacity 0.5s ease-in-out;
-}
